--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    border: 3px solid black;
+    border: 1px solid rgb(24, 2, 63);
 }
 
 .h1{
